tinyc/test/bad/ptr-to-void-subtract.c
int main()
{
    void *p, *y;
    p - 2;
    return 0;
}
